// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DangerIcon [common] example testing should match snapshot(s) for 1.basic 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-DangerIcon"
  color="primary"
  isClickable={false}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-DangerIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-DangerIcon-x"
    d="M5.5 5.5l5 5m0-5l-5 5"
    stroke="#fff"
  />
</Icon>
`;

exports[`DangerIcon [common] example testing should match snapshot(s) for 1.basic 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-DangerIcon lucid-DangerIcon-is-clickable"
  color="primary"
  isClickable={true}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-DangerIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-DangerIcon-x"
    d="M5.5 5.5l5 5m0-5l-5 5"
    stroke="#fff"
  />
</Icon>
`;

exports[`DangerIcon [common] example testing should match snapshot(s) for 1.basic 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-DangerIcon lucid-DangerIcon-is-disabled"
  color="primary"
  isClickable={false}
  isDisabled={true}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-DangerIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-DangerIcon-x"
    d="M5.5 5.5l5 5m0-5l-5 5"
    stroke="#fff"
  />
</Icon>
`;
